--- a/css/expanding.css
+++ b/css/expanding.css
@@ -14,6 +14,11 @@ body{
     width: 90vw;
 }
 
+.return {
+    position: fixed;
+    top: -1px;
+    left: -1px;
+}
 .panel{
     background-size: cover;
     background-position: center;
