--- a/css/search.css
+++ b/css/search.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+.return {
+    position: fixed;
+    top: -1px;
+    left: -1px;
+}
+
 body{
     display: flex;
     height: 100vh;
