--- a/css/jokes.css
+++ b/css/jokes.css
@@ -1,3 +1,16 @@
 body {
     background-color: darkslateblue;
 }
+
+.container {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    overflow: hidden;
+}
+
+.h3 {
+    
+}
