--- a/css/sounds.css
+++ b/css/sounds.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
-
 body {
-    font-family: 'Montserrat', sans-serif;
     background-color: rgb(161, 100, 223);
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    text-align: center;
-    margin: 0;
+    align-items:center;
+    justify-content:center;
+    height:100vh;
+    text-align:center;
+    margin:0;
     overflow: hidden;
 }
 
+
+
+
 .btn {
     background-color: rebeccapurple;
-    color: white;
-    border: none;
+    color:white;
+    border:none;
     border-radius: 5px;
     cursor: pointer;
     margin: 1rem;
@@ -23,6 +23,9 @@ body {
     font-size: 1.2rem;
 }
 
+
+
+
 .btn:hover {
-    opacity: 90%
+    opacity: 0.5;
 }
